--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,20 @@ APP_KEYS="toBeModified1,toBeModified2"
 API_TOKEN_SALT=tobemodified
 ADMIN_JWT_SECRET=tobemodified
 JWT_SECRET=tobemodified
+
+##################################################3
+HOST=0.0.0.0
+PORT=1337
+APP_KEYS=1TO4zDL20W+Ro48YPZoQeA==,PH9PsxD9Z03TsmlRYcvTig==,u632yQ/rBtBhn3FUeAZ70g==,4mvgaqnp3ZWUuK8xmCV6tg==
+API_TOKEN_SALT=X8yDd5QHd5HPkfhBmD75Vg==
+ADMIN_JWT_SECRET=cSVqQMC5vmRNtJATZ4Glmw==
+TRANSFER_TOKEN_SALT=p47E4NifeMvUzXcS4ydS2A==
+# Database
+DATABASE_CLIENT=mysql
+DATABASE_HOST=127.0.0.1
+DATABASE_PORT=3306
+DATABASE_NAME=octosoho
+DATABASE_USERNAME=root
+DATABASE_PASSWORD=atib
+DATABASE_SSL=false
+JWT_SECRET=BjEevziFzZSwzC93W51UHw==
